Capitulos restantes do trabalho.

--- a/Notebook_TC1_FIAP_Sec3_Preprocessamento.ipynb
+++ b/Notebook_TC1_FIAP_Sec3_Preprocessamento.ipynb
@@ -43,18 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "95a386bc",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -159,7 +151,7 @@
        "4   32    male  28.9         0     no  northwest   3866.86"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,14 +180,12 @@
    "source": [
     "# Pré-processamento de Dados - Tech Challenge FIAP\n",
     "\n",
-    "## 1. Tratamento de Registros Duplicados\n",
-    "\n",
-    "Primeiro, vamos identificar e remover registros duplicados conforme identificado na EDA."
+    "## 1. Tratamento de Registros Duplicados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fbeca550",
    "metadata": {},
    "outputs": [
@@ -241,13 +231,7 @@
    "source": [
     "## 2. Transformação da Variável Target (expenses)\n",
     "\n",
-    "Aplicando transformação logarítmica para normalizar a distribuição assimétrica da variável expenses.\n",
-    "\n",
-    "**Justificativa**: A transformação logarítmica é útil quando:\n",
-    "- A distribuição é assimétrica para a direita (como observado na EDA)\n",
-    "- Queremos reduzir o impacto de outliers\n",
-    "- Buscamos estabilizar a variância\n",
-    "- Melhorar a performance de modelos lineares"
+    "Aplicando transformação logarítmica para normalizar a distribuição assimétrica da variável expenses."
    ]
   },
   {
@@ -260,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_2120\\1680917407.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_424\\380055480.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -538,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "cce0b7b5",
    "metadata": {},
    "outputs": [
@@ -623,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "40dd43bc",
    "metadata": {},
    "outputs": [
@@ -718,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cd3cb4a4",
    "metadata": {},
    "outputs": [
@@ -727,8 +711,8 @@
      "output_type": "stream",
      "text": [
       "Dataset Final para Modelagem:\n",
-      "Shape das features (X): (1337, 17)\n",
-      "Features selecionadas: 17\n",
+      "Shape das features (X): (1337, 16)\n",
+      "Features selecionadas: 16\n",
       "\n",
       "Lista de features:\n",
       " 1. age\n",
@@ -743,14 +727,27 @@
       "10. region_northwest\n",
       "11. region_southeast\n",
       "12. region_southwest\n",
-      "13. bmi_category\n",
-      "14. bmi_normal\n",
-      "15. bmi_obese\n",
-      "16. bmi_overweight\n",
-      "17. bmi_underweight\n",
+      "13. bmi_normal\n",
+      "14. bmi_obese\n",
+      "15. bmi_overweight\n",
+      "16. bmi_underweight\n",
       "\n",
       "Target original (y): (1337,)\n",
       "Target transformado (y_log): (1337,)\n",
+      "\n",
+      "Tipos de dados das features:\n",
+      "bool       8\n",
+      "float64    5\n",
+      "int32      3\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Verificação - Features categóricas restantes (devem ser apenas encoded):\n",
+      "✓ Todas as features estão numericamente encodadas\n",
+      "\n",
+      "Dataset limpo criado:\n",
+      "Shape antes da limpeza: (1337, 22)\n",
+      "Shape após limpeza: (1337, 18)\n",
+      "Colunas removidas: 4\n",
       "\n",
       "Dados processados salvos em: C:\\Users\\prado\\.cache\\kagglehub\\datasets\\awaiskaggler\\insurance-csv\\versions\\1/insurance_preprocessed.csv\n"
      ]
@@ -759,15 +756,14 @@
    "source": [
     "# 6. DATASET FINAL PREPARADO\n",
     "\n",
-    "# Selecionando features para o processamento\n",
+    "# Selecionando apenas features numéricas e categóricas encodadas\n",
     "features_for_modeling = (\n",
     "    numerical_features +  # Features numéricas escalonadas\n",
     "    ['smoker_encoded', 'sex_male', 'high_risk'] +  # Features categóricas encodadas\n",
-    "    [col for col in df_final.columns if col.startswith('region_')] +  # Region dummies\n",
-    "    [col for col in df_final.columns if col.startswith('bmi_')]  # BMI category dummies\n",
+    "    [col for col in df_final.columns if col.startswith('region_')] +  # Regions\n",
+    "    [col for col in df_final.columns if col.startswith('bmi_') and col != 'bmi_category']  # BMI categories (apenas dummies)\n",
     ")\n",
     "\n",
-    "# Dataset final para modelagem\n",
     "X = df_final[features_for_modeling]\n",
     "y_original = df_final['expenses']\n",
     "y_transformed = df_final['log_expenses']\n",
@@ -782,7 +778,24 @@
     "print(f\"\\nTarget original (y): {y_original.shape}\")\n",
     "print(f\"Target transformado (y_log): {y_transformed.shape}\")\n",
     "\n",
-    "df_final.to_csv(f\"{base_dados}/insurance_preprocessed.csv\", index=False)\n",
+    "print(\"\\nTipos de dados das features:\")\n",
+    "print(X.dtypes.value_counts())\n",
+    "\n",
+    "print(\"\\nVerificação - Features categóricas restantes (devem ser apenas encoded):\")\n",
+    "categorical_features = X.select_dtypes(include=['object']).columns\n",
+    "if len(categorical_features) > 0:\n",
+    "    print(f\"ATENÇÃO: Features categóricas não encodadas encontradas: {list(categorical_features)}\")\n",
+    "else:\n",
+    "    print(\"✓ Todas as features estão numericamente encodadas\")\n",
+    "\n",
+    "df_final_clean = df_final.drop(columns=['sex', 'smoker', 'region', 'bmi_category'])\n",
+    "\n",
+    "print(f\"\\nDataset limpo criado:\")\n",
+    "print(f\"Shape antes da limpeza: {df_final.shape}\")\n",
+    "print(f\"Shape após limpeza: {df_final_clean.shape}\")\n",
+    "print(f\"Colunas removidas: {df_final.shape[1] - df_final_clean.shape[1]}\")\n",
+    "\n",
+    "df_final_clean.to_csv(f\"{base_dados}/insurance_preprocessed.csv\", index=False)\n",
     "print(f\"\\nDados processados salvos em: {base_dados}/insurance_preprocessed.csv\")"
    ]
   }
@@ -792,18 +805,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.11"
   }
  },
  "nbformat": 4,
