Ajustes finais: Normalização, estratificação e transformação inversa em resultados

--- a/Notebook_TC1_FIAP_Sec2_Exploracao_Dados.ipynb
+++ b/Notebook_TC1_FIAP_Sec2_Exploracao_Dados.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "48f4e63a",
+   "metadata": {},
+   "source": [
+    "# Tech Challenge FIAP - Etapa 2: Análise Exploratória"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "70a17152",
