--- a/Notebook_TC1_FIAP_Sec3_Preprocessamento.ipynb
+++ b/Notebook_TC1_FIAP_Sec3_Preprocessamento.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a5cc284b",
+   "metadata": {},
+   "source": [
+    "# Tech Challenge FIAP - Etapa 3: Pré-Processamento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "70a17152",
@@ -595,14 +603,7 @@
    "id": "79920a36",
    "metadata": {},
    "source": [
-    "## 5. Escalonamento de Features Numéricas\n",
-    "\n",
-    "**Importância do escalonamento:**\n",
-    "- Algoritmos baseados em distância (KNN, SVM, Neural Networks) são sensíveis à escala\n",
-    "- Features com escalas maiores podem dominar o modelo\n",
-    "- Melhora a convergência de algoritmos de otimização\n",
-    "- StandardScaler: normaliza para média 0 e desvio padrão 1\n",
-    "- Preserva a distribuição original dos dados"
+    "## 5. Escalonamento de Features Numéricas"
    ]
   },
   {
