--- a/Notebook_TC1_FIAP_Sec4_Modelagem.ipynb
+++ b/Notebook_TC1_FIAP_Sec4_Modelagem.ipynb
@@ -5,12 +5,12 @@
    "id": "fa48f80c",
    "metadata": {},
    "source": [
-    "# Tech Challenge FIAP - Etapa 6: Validação Estatística"
+    "# Tech Challenge FIAP - Etapa 4: Modelagem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d164ab3",
    "metadata": {},
    "outputs": [
@@ -46,9 +46,7 @@
    "id": "04a62635",
    "metadata": {},
    "source": [
-    "## 1. Carregamento do Dataset\n",
-    "\n",
-    "Vamos carregar o dataset pré-processado que já passou pelas etapas de limpeza, transformação e feature engineering."
+    "## 1. Carregamento do Dataset"
    ]
   },
   {
@@ -312,38 +310,282 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a274723",
+   "id": "dfb4dbb1",
    "metadata": {},
    "source": [
-    "## 2. Pipeline de Modelagem para Múltiplos Targets\n",
-    "\n",
-    "Vamos definir funções para executar todo o pipeline de modelagem para cada target, garantindo que não haja vazamento de informação entre features e target."
+    "### 1.1. Correção do Data Leakage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "7aaf16c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalização feita corretamente após o split. Exemplos dos dados normalizados (treino):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker_encoded</th>\n",
+       "      <th>sex_male</th>\n",
+       "      <th>region_northeast</th>\n",
+       "      <th>region_northwest</th>\n",
+       "      <th>region_southeast</th>\n",
+       "      <th>region_southwest</th>\n",
+       "      <th>age_bmi_interaction</th>\n",
+       "      <th>age_squared</th>\n",
+       "      <th>bmi_normal</th>\n",
+       "      <th>bmi_obese</th>\n",
+       "      <th>bmi_overweight</th>\n",
+       "      <th>bmi_underweight</th>\n",
+       "      <th>high_risk</th>\n",
+       "      <th>expenses</th>\n",
+       "      <th>log_expenses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>0.209157</td>\n",
+       "      <td>-0.957778</td>\n",
+       "      <td>0.769598</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.310370</td>\n",
+       "      <td>0.025355</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8017.06</td>\n",
+       "      <td>8.989452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418</th>\n",
+       "      <td>1.775700</td>\n",
+       "      <td>1.376585</td>\n",
+       "      <td>-0.076801</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.482171</td>\n",
+       "      <td>2.097984</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14418.28</td>\n",
+       "      <td>9.576321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>938</th>\n",
+       "      <td>0.992428</td>\n",
+       "      <td>-0.218015</td>\n",
+       "      <td>-0.923201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.672609</td>\n",
+       "      <td>0.954127</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9487.64</td>\n",
+       "      <td>9.157851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>533</th>\n",
+       "      <td>-0.146876</td>\n",
+       "      <td>0.883410</td>\n",
+       "      <td>-0.923201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.243620</td>\n",
+       "      <td>-0.325712</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19214.71</td>\n",
+       "      <td>9.863483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>-1.499800</td>\n",
+       "      <td>1.228633</td>\n",
+       "      <td>-0.923201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1.000657</td>\n",
+       "      <td>-1.254484</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14133.04</td>\n",
+       "      <td>9.556341</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          age       bmi  children  smoker_encoded  sex_male  region_northeast  \\\n",
+       "367  0.209157 -0.957778  0.769598               0         0             False   \n",
+       "418  1.775700  1.376585 -0.076801               0         1             False   \n",
+       "938  0.992428 -0.218015 -0.923201               0         1             False   \n",
+       "533 -0.146876  0.883410 -0.923201               0         1             False   \n",
+       "354 -1.499800  1.228633 -0.923201               0         0             False   \n",
+       "\n",
+       "     region_northwest  region_southeast  region_southwest  \\\n",
+       "367              True             False             False   \n",
+       "418             False              True             False   \n",
+       "938             False              True             False   \n",
+       "533             False              True             False   \n",
+       "354             False              True             False   \n",
+       "\n",
+       "     age_bmi_interaction  age_squared  bmi_normal  bmi_obese  bmi_overweight  \\\n",
+       "367            -0.310370     0.025355       False      False            True   \n",
+       "418             2.482171     2.097984       False       True           False   \n",
+       "938             0.672609     0.954127       False      False            True   \n",
+       "533             0.243620    -0.325712       False       True           False   \n",
+       "354            -1.000657    -1.254484       False       True           False   \n",
+       "\n",
+       "     bmi_underweight  high_risk  expenses  log_expenses  \n",
+       "367            False          0   8017.06      8.989452  \n",
+       "418            False          0  14418.28      9.576321  \n",
+       "938            False          0   9487.64      9.157851  \n",
+       "533            False          0  19214.71      9.863483  \n",
+       "354            False          0  14133.04      9.556341  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Colunas numéricas a ser normalizadas\n",
+    "numeric_cols = ['age', 'bmi', 'children']\n",
+    "\n",
+    "features = df.drop(columns=['expenses', 'log_expenses'])\n",
+    "target_expenses = df['expenses']\n",
+    "target_log = df['log_expenses']\n",
+    "\n",
+    "X_train, X_test, y_train_exp, y_test_exp, y_train_log, y_test_log = train_test_split(\n",
+    "    features, target_expenses, target_log, test_size=0.2, random_state=42, stratify=df['smoker_encoded']\n",
+    ")\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = X_train.copy()\n",
+    "X_test_scaled = X_test.copy()\n",
+    "X_train_scaled[numeric_cols] = scaler.fit_transform(X_train[numeric_cols])\n",
+    "X_test_scaled[numeric_cols] = scaler.transform(X_test[numeric_cols])\n",
+    "\n",
+    "train_df = X_train_scaled.copy()\n",
+    "train_df['expenses'] = y_train_exp\n",
+    "train_df['log_expenses'] = y_train_log\n",
+    "\n",
+    "test_df = X_test_scaled.copy()\n",
+    "test_df['expenses'] = y_test_exp\n",
+    "test_df['log_expenses'] = y_test_log\n",
+    "\n",
+    "print(\"Normalização feita corretamente após o split. Exemplos dos dados normalizados (treino):\")\n",
+    "display(train_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a274723",
+   "metadata": {},
+   "source": [
+    "## 2. Pipeline de Modelagem para Múltiplos Targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ac977e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Função para preparar dados, treinar modelos, realizar validação cruzada e avaliar métricas\n",
-    "def run_regression_pipeline(df, target_column, drop_columns, model_names=None):\n",
+    "def run_regression_pipeline(df, target_column, drop_columns, model_names=None, revert_log=False):\n",
     "    \"\"\"\n",
     "    Executa o pipeline de regressão para um target específico.\n",
     "    - df: DataFrame de entrada\n",
     "    - target_column: nome da coluna target\n",
     "    - drop_columns: lista de colunas a remover das features (inclui o outro target)\n",
     "    - model_names: nomes dos modelos para exibição\n",
+    "    - revert_log: se True, reverte np.expm1() nas métricas e previsões\n",
     "    Retorna: dicionário com resultados, previsões, resíduos, etc.\n",
     "    \"\"\"\n",
-    "    # Corrigido: garantir que a coluna target não está nas features\n",
     "    X = df.drop(columns=drop_columns + [target_column] if target_column not in drop_columns else drop_columns)\n",
     "    y = df[target_column]\n",
     "\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X, y, test_size=0.2, random_state=42\n",
+    "    stratify_col = df['smoker_encoded']\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test, strat_train, strat_test = train_test_split(\n",
+    "        X, y, stratify_col, test_size=0.2, random_state=42, stratify=stratify_col\n",
     "    )\n",
+    "\n",
+    "    print(\"Proporção de classes em treino:\")\n",
+    "    print(pd.Series(strat_train).value_counts(normalize=True))\n",
+    "    print(\"Proporção de classes em teste:\")\n",
+    "    print(pd.Series(strat_test).value_counts(normalize=True))\n",
     "\n",
     "    models = {\n",
     "        'Linear Regression': LinearRegression(),\n",
@@ -374,6 +616,9 @@
     "        }\n",
     "\n",
     "    def calculate_metrics(y_true, y_pred):\n",
+    "        if revert_log:\n",
+    "            y_true = np.expm1(y_true)\n",
+    "            y_pred = np.expm1(y_pred)\n",
     "        mae = mean_absolute_error(y_true, y_pred)\n",
     "        mse = mean_squared_error(y_true, y_pred)\n",
     "        rmse = np.sqrt(mse)\n",
@@ -390,7 +635,10 @@
     "    best_model_idx = results_df['R²'].idxmax()\n",
     "    best_model_name = results_df.loc[best_model_idx, 'Modelo']\n",
     "    best_predictions = predictions[best_model_name]\n",
-    "    residuals = y_test - best_predictions\n",
+    "    if revert_log:\n",
+    "        residuals = np.expm1(y_test) - np.expm1(best_predictions)\n",
+    "    else:\n",
+    "        residuals = y_test - best_predictions\n",
     "\n",
     "    return {\n",
     "        'X_train': X_train, 'X_test': X_test, 'y_train': y_train, 'y_test': y_test,\n",
@@ -403,7 +651,8 @@
     "            'R² Desvio': [cv_results[name]['R2_std'] for name in cv_results.keys()],\n",
     "            'RMSE Médio': [cv_results[name]['RMSE_mean'] for name in cv_results.keys()],\n",
     "            'RMSE Desvio': [cv_results[name]['RMSE_std'] for name in cv_results.keys()]\n",
-    "        })\n",
+    "        }),\n",
+    "        'revert_log': revert_log\n",
     "    }"
    ]
   },
@@ -414,17 +663,15 @@
    "source": [
     "## 3. Modelagem para ambos os targets\n",
     "\n",
-    "Executaremos o pipeline para:\n",
+    "Pipeline para:\n",
     "- Target 1: **expenses** (valor original)\n",
-    "- Target 2: **log_expenses** (transformação logarítmica)\n",
-    "\n",
-    "Em cada caso, a coluna do outro target é removida das features."
+    "- Target 2: **log_expenses** (transformação logarítmica)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0709daa",
+   "id": "553e30b8",
    "metadata": {},
    "outputs": [
     {
@@ -432,35 +679,65 @@
      "output_type": "stream",
      "text": [
       "=== Pipeline para target: expenses ===\n",
+      "Proporção de classes em treino:\n",
+      "smoker_encoded\n",
+      "0    0.795136\n",
+      "1    0.204864\n",
+      "Name: proportion, dtype: float64\n",
+      "Proporção de classes em teste:\n",
+      "smoker_encoded\n",
+      "0    0.794776\n",
+      "1    0.205224\n",
+      "Name: proportion, dtype: float64\n",
       "Concluído para expenses.\n",
       "\n",
       "=== Pipeline para target: log_expenses ===\n",
+      "Proporção de classes em treino:\n",
+      "smoker_encoded\n",
+      "0    0.795136\n",
+      "1    0.204864\n",
+      "Name: proportion, dtype: float64\n",
+      "Proporção de classes em teste:\n",
+      "smoker_encoded\n",
+      "0    0.794776\n",
+      "1    0.205224\n",
+      "Name: proportion, dtype: float64\n",
       "Concluído para expenses.\n",
       "\n",
       "=== Pipeline para target: log_expenses ===\n",
+      "Proporção de classes em treino:\n",
+      "smoker_encoded\n",
+      "0    0.795136\n",
+      "1    0.204864\n",
+      "Name: proportion, dtype: float64\n",
+      "Proporção de classes em teste:\n",
+      "smoker_encoded\n",
+      "0    0.794776\n",
+      "1    0.205224\n",
+      "Name: proportion, dtype: float64\n",
       "Concluído para log_expenses.\n",
       "Concluído para log_expenses.\n"
      ]
     }
    ],
    "source": [
-    "# expenses (target original)\n",
     "print(\"=== Pipeline para target: expenses ===\")\n",
     "pipeline_expenses = run_regression_pipeline(\n",
-    "    df,\n",
+    "    pd.concat([train_df, test_df], ignore_index=True),\n",
     "    target_column='expenses',\n",
     "    drop_columns=['log_expenses'],\n",
-    "    model_names=None\n",
+    "    model_names=None,\n",
+    "    revert_log=False\n",
     ")\n",
     "print(\"Concluído para expenses.\\n\")\n",
     "\n",
-    "# log_expenses (target transformado)\n",
     "print(\"=== Pipeline para target: log_expenses ===\")\n",
     "pipeline_log = run_regression_pipeline(\n",
-    "    df,\n",
+    "    pd.concat([train_df, test_df], ignore_index=True),\n",
     "    target_column='log_expenses',\n",
-    "    drop_columns=['expenses'], \n",
-    "    model_names=None\n",
+    "    drop_columns=['expenses'],\n",
+    "    model_names=None,\n",
+    "    revert_log=True\n",
     ")\n",
     "print(\"Concluído para log_expenses.\")"
    ]
